src-tauri/tests/snapshots/ipc_contract__module_purchase_state_shape.snap
---
source: tests/ipc_contract.rs
expression: "shape(&vec![ModulePurchaseStateView::Ready { quote: quote.clone() },\nModulePurchaseStateView::InsufficientFunds\n{\n    quote, shortfall_wei: \"1401250000000000000\".into(), shortfall_avax:\n    \"1.40125\".into(),\n}, ModulePurchaseStateView::StaleListing\n{ verified_block: \"42113011\".into(), },])"
---
[
  {
    "status": "ready",
    "quote": {
      "verifiedBlock": "42113010",
      "buyer": "0x00000000000000000000000000000000000000e1",
      "listingId": "900719925474099312346",
      "seller": "0x00000000000000000000000000000000000000b8",
      "priceWei": "2400000000000000000",
      "priceAvax": "2.40",
      "estimatedNetworkFeeWei": "1250000000000000",
      "estimatedNetworkFeeAvax": "0.00125",
      "estimatedTotalWei": "2401250000000000000",
      "estimatedTotalAvax": "2.40125",
      "balanceWei": "5000000000000000000",
      "module": {
        "tokenId": "900719925474099312345",
        "contract": "0x00000000000000000000000000000000000000a7",
        "owner": "0x00000000000000000000000000000000000000b8",
        "moduleId": "0x1111111111111111111111111111111111111111111111111111111111111111",
        "provenanceHash": "0x2222222222222222222222222222222222222222222222222222222222222222",
        "displayName": "Relay Amplifier MK-II",
        "assetClass": "MODULE",
        "slot": "RADIO",
        "rarity": "RARE",
        "effectType": "RELAY_REWARD_BPS",
        "primaryEffectValue": 1850,
        "secondaryEffectValue": 0,
        "effect": "+18.50% RELAY REWARD",
        "artworkUri": "ipfs://bafybeiradioamplifiermk2",
        "artworkDigest": "0x3333333333333333333333333333333333333333333333333333333333333333",
        "schemaVersion": 1,
        "mintedBy": "0x00000000000000000000000000000000000000c9",
        "soulbound": false,
        "revoked": false
      }
    }
  },
  {
    "status": "insufficient_funds",
    "quote": {
      "verifiedBlock": "42113010",
      "buyer": "0x00000000000000000000000000000000000000e1",
      "listingId": "900719925474099312346",
      "seller": "0x00000000000000000000000000000000000000b8",
      "priceWei": "2400000000000000000",
      "priceAvax": "2.40",
      "estimatedNetworkFeeWei": "1250000000000000",
      "estimatedNetworkFeeAvax": "0.00125",
      "estimatedTotalWei": "2401250000000000000",
      "estimatedTotalAvax": "2.40125",
      "balanceWei": "5000000000000000000",
      "module": {
        "tokenId": "900719925474099312345",
        "contract": "0x00000000000000000000000000000000000000a7",
        "owner": "0x00000000000000000000000000000000000000b8",
        "moduleId": "0x1111111111111111111111111111111111111111111111111111111111111111",
        "provenanceHash": "0x2222222222222222222222222222222222222222222222222222222222222222",
        "displayName": "Relay Amplifier MK-II",
        "assetClass": "MODULE",
        "slot": "RADIO",
        "rarity": "RARE",
        "effectType": "RELAY_REWARD_BPS",
        "primaryEffectValue": 1850,
        "secondaryEffectValue": 0,
        "effect": "+18.50% RELAY REWARD",
        "artworkUri": "ipfs://bafybeiradioamplifiermk2",
        "artworkDigest": "0x3333333333333333333333333333333333333333333333333333333333333333",
        "schemaVersion": 1,
        "mintedBy": "0x00000000000000000000000000000000000000c9",
        "soulbound": false,
        "revoked": false
      }
    },
    "shortfallWei": "1401250000000000000",
    "shortfallAvax": "1.40125"
  },
  {
    "status": "stale_listing",
    "verifiedBlock": "42113011"
  }
]
