src-tauri/tests/snapshots/ipc_contract__security_status_shape.snap
---
source: tests/ipc_contract.rs
expression: "shape(&SecurityStatus { locked: false, passphrase_enabled: true })"
---
{
  "locked": false,
  "passphraseEnabled": true
}
