src-tauri/tests/snapshots/ipc_contract__voucher_view_shape.snap
---
source: tests/ipc_contract.rs
expression: "shape(&VoucherView\n{\n    token_id: 42, voucher_type: \"compute\".into(), description:\n    \"AI compute credit\".into(), owner:\n    \"0xfF8dd6dbB7B97b44044573cFE843dE1F463637a9\".into(), minted_by:\n    \"0xfF8dd6dbB7B97b44044573cFE843dE1F463637a9\".into(), slot: 0, rarity: 0,\n    effect_bps: 0,\n})"
---
{
  "tokenId": 42,
  "voucherType": "compute",
  "description": "AI compute credit",
  "owner": "0xfF8dd6dbB7B97b44044573cFE843dE1F463637a9",
  "mintedBy": "0xfF8dd6dbB7B97b44044573cFE843dE1F463637a9",
  "slot": 0,
  "rarity": 0,
  "effectBps": 0
}
